@@ -4538,11 +4538,7 @@ void tbblue_set_value_port_position(z80_byte index_position,z80_byte value)
 			
 			if (value & 8) {   
 				
-				aux_divmmc=	diviface_control_register;
-				
-				aux_divmmc &=(255-64);
-				
-				diviface_write_control_register(aux_divmmc);
+                diviface_control_register &=(255-64);
 				
 				
 			}
